src/objects/Business_Role_Access__c.object
<CustomObject>
    <fields>
        <fullName>Business_Role__c</fullName>
        <label>Business Role</label>
        <referenceTo>Business_Role__c</referenceTo>
        <relationshipLabel>Business Role Accesses</relationshipLabel>
        <relationshipName>Business_Role_Accesses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_Id_Calc__c</fullName>
        <formula>Business_Role__r.Name &amp; &apos;&apos; &amp; TEXT(Type__c) &amp; Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External ID (formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>Unique External Id (BR Name + &apos;&apos; + Type + &apos;&apos; + Name)</description>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines if BR Assignment is active or not</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PermissionSet</fullName>
                    <default>true</default>
                    <label>PermissionSet</label>
                </value>
                <value>
                    <fullName>Queue</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>UserRole</fullName>
                </value>
                <value>
                    <fullName>Profile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Business Role Access</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Role Accesses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AccessNameNotChanged</fullName>
        <active>true</active>
        <errorConditionFormula>UPPER(PRIORVALUE(Name)) != UPPER(Name)</errorConditionFormula>
        <errorMessage>Access name cannot be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AccessTypeNotChanged</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Type__c )</errorConditionFormula>
        <errorMessage>Access type cannot be changed.</errorMessage>
    </validationRules>
</CustomObject>